--- a/at/pom.xml
+++ b/at/pom.xml
@@ -16,27 +16,36 @@ Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
 02110-1301, USA.
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.jboss.narayana.rts</groupId>
     <artifactId>rest-tx</artifactId>
     <version>5.11.3.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
   <artifactId>restat</artifactId>
   <packaging>pom</packaging>
   <name>Narayana: restat</name>
   <description>RESTful Atomic Transactions</description>
   <url>http://www.jboss.org/jbosstm</url>
+
+  <modules>
+    <module>util</module>
+    <module>tx</module>
+    <module>webservice</module>
+    <module>integration</module>
+    <module>bridge</module>
+  </modules>
   <properties>
-   <checkstyle.skip>false</checkstyle.skip>
- </properties>
+    <checkstyle.skip>false</checkstyle.skip>
+    <sortpom.skip>false</sortpom.skip>
+  </properties>
   <build>
     <plugins>
       <plugin>
-        <inherited>false</inherited>
         <groupId>org.sonatype.plugins</groupId>
         <artifactId>nexus-staging-maven-plugin</artifactId>
+        <inherited>false</inherited>
       </plugin>
     </plugins>
   </build>
@@ -48,24 +57,16 @@ Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-install-plugin</artifactId>
+            <inherited>false</inherited>
             <executions>
               <execution>
                 <id>default-install</id>
                 <phase>install</phase>
               </execution>
             </executions>
-            <inherited>false</inherited>
           </plugin>
         </plugins>
       </build>
     </profile>
   </profiles>
-
-  <modules>
-    <module>util</module>
-    <module>tx</module>
-    <module>webservice</module>
-    <module>integration</module>
-    <module>bridge</module>
-  </modules>
 </project>
