--- a/at/tx/pom.xml
+++ b/at/tx/pom.xml
@@ -16,21 +16,21 @@
     02110-1301, USA.
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.jboss.narayana.rts</groupId>
     <artifactId>restat</artifactId>
     <version>5.11.3.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
   <artifactId>restat-api</artifactId>
   <packaging>jar</packaging>
   <name>Narayana: restat tx</name>
   <description>A JAX-RS service that implements the RESTAT specification</description>
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.build.timestamp.format>yyyyMMdd'T'HHmmss</maven.build.timestamp.format>
     <javaee6.with.tools.version>1.0.0.M7</javaee6.with.tools.version>
+    <maven.build.timestamp.format>yyyyMMdd'T'HHmmss</maven.build.timestamp.format>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <!-- ssl debug: -Djavax.net.debug=ssl:handshake  http://docs.oracle.com/javase/6/docs/technotes/guides/security/jsse/JSSERefGuide.html#Debug
      -->
@@ -73,27 +73,6 @@
       <artifactId>jboss-servlet-api_3.0_spec</artifactId>
       <version>${version.org.jboss.spec.javax.servlet}</version>
       <scope>provided</scope>
-    </dependency>
-    <!-- Jersey -->
-    <dependency>
-      <groupId>asm</groupId>
-      <artifactId>asm-all</artifactId>
-      <version>${version.asm}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.sun.grizzly</groupId>
-      <artifactId>grizzly-servlet-webserver</artifactId>
-      <version>${version.com.sun.grizzly}</version>
-      <scope>test</scope>
-    </dependency>
-    <!-- end Jersey -->
-
-    <dependency>
-      <groupId>org.jboss.narayana</groupId>
-      <artifactId>test-utils</artifactId>
-      <version>${project.version}</version>
-      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.narayana.jta</groupId>
@@ -153,6 +132,35 @@
       <version>${version.org.jboss.logging.jboss-logging}</version>
       <scope>provided</scope>
     </dependency>
+
+    <!-- undertow with RestEasy -->
+    <dependency>
+      <groupId>org.jboss.resteasy</groupId>
+      <artifactId>resteasy-client</artifactId>
+      <version>${version.org.jboss.resteasy}</version>
+      <scope>provided</scope>
+    </dependency>
+    <!-- Jersey -->
+    <dependency>
+      <groupId>asm</groupId>
+      <artifactId>asm-all</artifactId>
+      <version>${version.asm}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.grizzly</groupId>
+      <artifactId>grizzly-servlet-webserver</artifactId>
+      <version>${version.com.sun.grizzly}</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- end Jersey -->
+
+    <dependency>
+      <groupId>org.jboss.narayana</groupId>
+      <artifactId>test-utils</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
@@ -168,24 +176,24 @@
 
     <!-- grizzly with SPDY -->
     <dependency>
-        <groupId>org.glassfish.jersey.containers</groupId>
-        <artifactId>jersey-container-grizzly2-servlet</artifactId>
-        <version>2.7</version>
-        <scope>test</scope>
+      <groupId>org.glassfish.jersey.containers</groupId>
+      <artifactId>jersey-container-grizzly2-servlet</artifactId>
+      <version>2.7</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
-        <groupId>org.glassfish.grizzly</groupId>
-        <artifactId>grizzly-spdy</artifactId>
-        <version>2.3.11</version>
-        <scope>test</scope>
+      <groupId>org.glassfish.grizzly</groupId>
+      <artifactId>grizzly-spdy</artifactId>
+      <version>2.3.11</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
-        <groupId>org.glassfish.grizzly</groupId>
-        <artifactId>grizzly-npn-bootstrap</artifactId>
-        <version>1.0</version>
-        <scope>test</scope>
+      <groupId>org.glassfish.grizzly</groupId>
+      <artifactId>grizzly-npn-bootstrap</artifactId>
+      <version>1.0</version>
+      <scope>test</scope>
     </dependency>
     <!-- end grizzly with spdy -->
 
@@ -195,31 +203,23 @@
       <version>1.5.4</version>
       <scope>test</scope>
     </dependency>
-
-    <!-- undertow with RestEasy -->
     <dependency>
-        <groupId>org.jboss.resteasy</groupId>
-        <artifactId>resteasy-client</artifactId>
-        <version>${version.org.jboss.resteasy}</version>
-        <scope>provided</scope>
+      <groupId>org.jboss.resteasy</groupId>
+      <artifactId>resteasy-undertow</artifactId>
+      <version>${version.org.jboss.resteasy}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
-        <groupId>org.jboss.resteasy</groupId>
-        <artifactId>resteasy-undertow</artifactId>
-        <version>${version.org.jboss.resteasy}</version>
-        <scope>test</scope>
+      <groupId>io.undertow</groupId>
+      <artifactId>undertow-servlet</artifactId>
+      <version>[2.0.21,)</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
-        <groupId>io.undertow</groupId>
-        <artifactId>undertow-servlet</artifactId>
-        <version>[2.0.21,)</version>
-        <scope>test</scope>
-    </dependency>
-    <dependency>
-        <groupId>io.undertow</groupId>
-        <artifactId>undertow-core</artifactId>
-        <version>[2.0.21,)</version>
-        <scope>test</scope>
+      <groupId>io.undertow</groupId>
+      <artifactId>undertow-core</artifactId>
+      <version>[2.0.21,)</version>
+      <scope>test</scope>
     </dependency>
     <!-- end undertow with RestEasy -->
       <dependency>
@@ -268,15 +268,15 @@
   <build>
     <plugins>
       <plugin>
-        <inherited>false</inherited>
         <groupId>org.sonatype.plugins</groupId>
         <artifactId>nexus-staging-maven-plugin</artifactId>
+        <inherited>false</inherited>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-<!--
+          <!--
           <compilerArgument>-Xlint:all</compilerArgument>
           <showWarnings>false</showWarnings>
 -->
@@ -286,6 +286,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
+        <configuration>
+          <forceCreation>true</forceCreation>
+          <includePom>true</includePom>
+        </configuration>
         <executions>
           <execution>
             <id>create_sources_jar</id>
@@ -295,10 +299,6 @@
             <phase>prepare-package</phase>
           </execution>
         </executions>
-        <configuration>
-          <forceCreation>true</forceCreation>
-          <includePom>true</includePom>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -311,85 +311,87 @@
           </execution>
         </executions>
       </plugin>
-          <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-surefire-plugin</artifactId>
-              <configuration>
-                  <forkMode>pertest</forkMode>
-                  <!--
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <forkMode>pertest</forkMode>
+          <!--
                   <argLine>${surefireArgLine}</argLine>
                   -->
-              </configuration>
-          </plugin>
+        </configuration>
+      </plugin>
       <!--
           -->
     </plugins>
   </build>
   <profiles>
     <profile>
-        <id>ssl</id>
-        <activation>
-          <activeByDefault>false</activeByDefault>
-        </activation>
+      <id>ssl</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
 
-        <dependencies>
-        </dependencies>
-        <build>  
-          <plugins>
-            <plugin>
-              <artifactId>maven-surefire-plugin</artifactId>
-              <configuration>
+      <dependencies></dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
               <!--
                 <argLine>${ssl.args} ${surefireArgLine}</argLine>
                 -->
-                <argLine>${ssl.args}</argLine>
-              </configuration>
-            </plugin>
-          </plugins>
+              <argLine>${ssl.args}</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
 
-        </build>
+      </build>
     </profile>
     <profile>
-        <id>spdy</id>
-        <activation>
-          <activeByDefault>false</activeByDefault>
-        </activation>
+      <id>spdy</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
 
-        <dependencies>
-        </dependencies>
-        <build>  
-          <plugins>
-            <plugin>
-              <artifactId>maven-surefire-plugin</artifactId>
-              <configuration>
+      <dependencies></dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
               <!--
                 <argLine>${spdy.args} ${surefireArgLine}</argLine>
                 -->
-                <argLine>${spdy.args}</argLine>
-              </configuration>
-            </plugin>
-          </plugins>
+              <argLine>${spdy.args}</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
 
-        </build>
+      </build>
     </profile>
     <profile>
-        <id>release</id>
-        <build>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-install-plugin</artifactId>
-                    <executions>
-                        <execution>
-                            <id>default-install</id>
-                            <phase>install</phase>
-                        </execution>
-                    </executions>
-                    <inherited>false</inherited>
-                </plugin>
+      <id>release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-install-plugin</artifactId>
+            <inherited>false</inherited>
+            <executions>
+              <execution>
+                <id>default-install</id>
+                <phase>install</phase>
+              </execution>
+            </executions>
+          </plugin>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
+            <configuration>
+              <source>8</source>
+              <detectOfflineLinks>false</detectOfflineLinks>
+            </configuration>
             <executions>
               <execution>
                 <id>create_javadocs</id>
@@ -399,22 +401,18 @@
                 <phase>prepare-package</phase>
               </execution>
             </executions>
-            <configuration>
-              <source>8</source>
-              <detectOfflineLinks>false</detectOfflineLinks>
-            </configuration>
           </plugin>
         </plugins>
       </build>
     </profile>
     <profile>
       <id>j9</id>
-        <activation>
-          <jdk>[1.9,11)</jdk>
-        </activation>
-        <properties>
-          <jvm.args.modular>--add-opens=java.base/java.lang=ALL-UNNAMED</jvm.args.modular>
-        </properties>
+      <activation>
+        <jdk>[1.9,11)</jdk>
+      </activation>
+      <properties>
+        <jvm.args.modular>--add-opens=java.base/java.lang=ALL-UNNAMED</jvm.args.modular>
+      </properties>
     </profile>
   </profiles>
 </project>
