--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,8 @@ Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
 
     <maven.compiler.source>1.8</maven.compiler.source>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+    <sortpom.skip>true</sortpom.skip>
   </properties>
 
   <dependencyManagement>
