--- a/transactionaldriver/transactionaldriver-standalone/pom.xml
+++ b/transactionaldriver/transactionaldriver-standalone/pom.xml
@@ -47,7 +47,7 @@
         <dependency> <!-- for XA testing purposes -->
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.1.4.jre7</version>
+            <version>42.3.2</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
