--- a/at/integration-jakarta/pom.xml
+++ b/at/integration-jakarta/pom.xml
@@ -13,7 +13,7 @@
   <parent>
     <groupId>org.jboss.narayana.rts</groupId>
     <artifactId>restat</artifactId>
-    <version>5.12.6.Final-SNAPSHOT</version>
+    <version>5.12.6.Final</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
