--- a/at/tx/pom.xml
+++ b/at/tx/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.jboss.narayana.rts</groupId>
     <artifactId>restat</artifactId>
-    <version>5.12.6.Final</version>
+    <version>5.12.7.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>restat-api</artifactId>
